# pydbops

./: Database.py  DatabaseOperations.py  LICENSE  MyDB.db  README.md  UserDefinedExceptions.py  driver_code.py  main.py  pydbops.py  pyproject.toml  requirements.txt  requirements_dev.txt  setup.cfg  tables.py  tox.ini
.github/workflows/: codeql-analysis.yml  test.yml
pydbops-cli/: README.md  requirements.txt
pydbops-cli/src/: Makefile  pydb.py  pydbops_cli.py
src/pydbops/: Database.py  UserDefinedExceptions.py  platforms_names.py  procedures.py  pydbms.py  pydbops.py  tables.py
src/pydbops.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: conftest.py  test_pydbops.py
